<?xml version="1.0" encoding="utf-8"?>

<!--@author: Mo.Msaad-->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:animateLayoutChanges="true"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:clickable="true"
    android:background="@drawable/back3"
    android:orientation="vertical">


    <TextView

        android:id="@+id/ForfotPass_titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:clickable="false"
        android:drawableBottom="@drawable/dash_icon_white"
        android:focusable="false"
        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:shadowRadius="10"
        android:layout_below="@+id/SignUpFragmnt_back_button"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/signUp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/SignUpFragmnt_back_button"
        android:animateLayoutChanges="true"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:paddingEnd="15dp"
        android:layout_marginStart="10dp"
        android:shadowDx="5"
        android:shadowRadius="10"
        android:shadowColor="@color/black"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/orange_arrow_left"
        android:background="@drawable/input_fields_frame_grey_round"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:text="@string/go_back_signUpFragment" />

    <EditText

        android:id="@+id/SignUpFrgmnt_email_field"
        android:animateLayoutChanges="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/input_fields_white_borders"
        android:cursorVisible="true"
        android:textCursorDrawable="@color/black"
        android:drawableStart="@drawable/email_icone"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColorHint="@color/darkOrange"
        tools:ignore="autofill" />

    <EditText

        android:id="@+id/pass_field"
        android:animateLayoutChanges="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SignUpFrgmnt_email_field"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:cursorVisible="true"
        android:textCursorDrawable="@color/black"
        android:background="@drawable/input_fields_white_borders"
        android:clickable="true"
        android:drawableStart="@drawable/lock_icone"
        android:ems="10"
        android:focusable="true"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/darkOrange"
        tools:counterColor="@color"
        tools:counterEnabled="true"
        tools:counterMinLenght="6"
        tools:ignore="TextFields,autofill" />

    <EditText

        android:id="@+id/confirm_pass"
        android:animateLayoutChanges="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass_field"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/input_fields_white_borders"
        android:ems="10"
        android:shadowColor="@color/darkOrange"
        android:shadowDx="10"
        android:hint="@string/confirm_password_hint"
        android:cursorVisible="true"
        android:textCursorDrawable="@color/black"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/darkOrange"
        tools:ignore="TextFields,autofill" />

    <Button
        android:id="@+id/SignUpFragmnt_sign_upButton"
        android:animateLayoutChanges="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_fields_frame_grey_round"
        android:padding="10dp"
        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:shadowRadius="10"
        android:text="@string/signUp"
        android:textStyle="bold"
        android:textColor="@color/orange" />


</RelativeLayout>











