<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"
            android:gravity="center">

            <EditText

                android:id="@+id/email_id_logIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:drawableStart="@drawable/white_email_icone"

                android:ems="10"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:minWidth="200dp"
                android:shadowColor="@android:color/holo_red_dark"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textColorHighlight="@android:color/darker_gray"
                android:textColorHint="@color/hints"
                android:textSize="16sp"
                app:backgroundTint="@color/colorEditTextUnderline" />

            <EditText

                android:id="@+id/password_id_logIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_id_logIn"
                android:layout_gravity="center"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/white_lock_closed"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:minWidth="200dp"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textColorHighlight="@android:color/darker_gray"
                android:textColorHint="@color/hints"
                android:textSize="16sp" />


        </RelativeLayout>

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center">

            <Button
                android:id="@+id/button_id_log_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/input_fields_frame_grey_round"
                android:drawablePadding="10dp"
                android:onClick="onClick"
                android:padding="5dp"
                android:shadowDx="5"
                android:shadowColor="@color/black"
                android:shadowRadius="5"
                android:text="@string/btn_log_in"
                android:textAllCaps="false"
                android:textColor="@color/orangeMainTheme"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/textView_id_forgotPass_logIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="onClick"

                android:padding="5dp"
                android:drawableBottom="@drawable/dash_icon_white"
                android:text="@string/hint_forgot_password"
                android:textColor="@color/grey"
                android:textSize="14sp"
                android:textStyle="bold|italic" />

        </RelativeLayout>

    </LinearLayout>

</merge>