<resources>
    <string name="app_name">ChefooD</string>

    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="photo">Photo</string>


    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
...
    <string name="hint_forgot_password">Forgot your password ?</string>
    <string name="hint_register">Don\'t have an account? Register here</string>
    <string name="hint_email">Email</string>
    <string name="search_Hint">Search</string>

    <!--Button texts-->
    <string name="btn_log_in">Sign in</string>
    <string name="or">OR</string>


    <string name="twitterUserName">\@twitterUserName</string>


...
    <string name="confirm_sing_out">Are you sure you want to SignOut?</string>
    <string name="signing_out">Signing Out…</string>
    <string name="post">Post</string>

    <!--Login layout-->

    <string name="hint_registerHere">No account? Register here for FREE</string>

    <!--Intent extras-->
    <string name="calling_activity">calling_activity</string>
    <string name="selected_image">selected_image</string>
    <string name="selected_bitmap">selected_bitmap</string>
    <string name="return_to_fragment">return_to_fragment</string>
...
